# jarl

./: CHANGELOG.md  Cargo.toml  README.md  dist-workspace.toml  jarl.toml  justfile
crates/flir-cli/: Cargo.toml
crates/flir-cli/src/: output_format.rs
crates/flir-cli/src/commands/: check.rs
crates/flir-cli/tests/integration/: output_format.rs
crates/flir-cli/tests/integration/snapshots/: integration__flir__must_pass_path.snap  integration__help__help_check-2.snap  integration__help__help_check.snap  integration__output_format__output_github.snap
crates/flir-core/: Cargo.toml
crates/flir-core/src/: utils_test.rs
crates/flir-core/src/analyze/: binary_expression.rs
crates/flir-core/src/lints/: mod.rs
crates/flir-core/src/lints/implicit_assignment/: implicit_assignment.rs  mod.rs
crates/flir-core/src/lints/repeat/: repeat.rs
crates/flir-lsp/: Cargo.toml
crates/jarl/: Cargo.toml
crates/jarl-cli/: Cargo.toml
crates/jarl-cli/src/: args.rs  output_format.rs
crates/jarl-cli/src/commands/: check.rs
crates/jarl-cli/tests/integration/: assignment_op.rs  output_format.rs  toml.rs
crates/jarl-cli/tests/integration/helpers/: command_ext.rs
crates/jarl-cli/tests/integration/snapshots/: integration__allow_dirty__dirty_git_repo_does_not_block_lint.snap  integration__assignment_op__assignment_from_cli-2.snap  integration__assignment_op__assignment_from_cli.snap  integration__assignment_op__assignment_from_toml-2.snap  integration__assignment_op__assignment_from_toml.snap  integration__assignment_op__assignment_wrong_value_from_cli-2.snap  integration__assignment_op__assignment_wrong_value_from_cli.snap  integration__assignment_op__assignment_wrong_value_from_toml-2.snap  integration__assignment_op__assignment_wrong_value_from_toml.snap  integration__comments__nolint_no_skip_file.snap  integration__comments__nolint_not_applied_when_comment_inside_node.snap  integration__comments__nolint_start_end.snap  integration__comments__nolint_start_end_with_specific_rules.snap  integration__comments__nolint_with_specific_rules.snap  integration__help__help_check-2.snap  integration__help__help_check.snap  integration__jarl__fix_options-2.snap  integration__jarl__fix_options.snap  integration__jarl__must_pass_path.snap  integration__jarl__newline_character_in_string.snap  integration__jarl__not_all_fixable_lints.snap  integration__jarl__one_lint.snap  integration__jarl__parsing_error_for_some_files.snap  integration__jarl__safe_and_unsafe_lints.snap  integration__jarl__several_lints_one_file.snap  integration__min_r_version__min_r_version_from_cli_only-3.snap  integration__min_r_version__min_r_version_from_description_only-2.snap  integration__output_format__output_default.snap  integration__output_format__output_full.snap  integration__output_format__with_parsing_error-2.snap  integration__output_format__with_parsing_error-3.snap  integration__output_format__with_parsing_error-4.snap  integration__output_format__with_parsing_error.snap  integration__rules__correct_rule_selection_and_exclusion.snap  integration__rules__ignore_rule_group-3.snap  integration__rules__ignore_rule_group.snap  integration__rules__select_ignore_interaction_with_rule_group-2.snap  integration__rules__select_rule_group-2.snap  integration__rules__select_rule_group-3.snap  integration__rules__select_rule_group.snap  (+14 more)
crates/jarl-core/: Cargo.toml
crates/jarl-core/src/: check.rs  config.rs  description.rs  diagnostic.rs  discovery.rs  lib.rs  rule_set.rs  settings.rs  suppression.rs  toml.rs  utils.rs  utils_ast.rs  utils_test.rs  vcs.rs
crates/jarl-core/src/analyze/: anyvalue.rs  binary_expression.rs  call.rs  for_loop.rs  identifier.rs  if_.rs  mod.rs  subset.rs  unary_expression.rs  while_.rs
crates/jarl-core/src/lints/: mod.rs
crates/jarl-core/src/lints/all_equal/: all_equal.rs
crates/jarl-core/src/lints/any_duplicated/: any_duplicated.rs
crates/jarl-core/src/lints/any_is_na/: any_is_na.rs
crates/jarl-core/src/lints/assignment/: assignment.rs  mod.rs
crates/jarl-core/src/lints/class_equals/: class_equals.rs  mod.rs
crates/jarl-core/src/lints/coalesce/: coalesce.rs  mod.rs
crates/jarl-core/src/lints/comparison_negation/: comparison_negation.rs  mod.rs
crates/jarl-core/src/lints/duplicated_arguments/: duplicated_arguments.rs  mod.rs
crates/jarl-core/src/lints/equals_na/: equals_na.rs  mod.rs
crates/jarl-core/src/lints/equals_null/: equals_null.rs  mod.rs
crates/jarl-core/src/lints/expect_length/: expect_length.rs  mod.rs
crates/jarl-core/src/lints/expect_named/: expect_named.rs  mod.rs
crates/jarl-core/src/lints/expect_null/: mod.rs
crates/jarl-core/src/lints/grepv/: grepv.rs
crates/jarl-core/src/lints/implicit_assignment/: implicit_assignment.rs
crates/jarl-core/src/lints/is_numeric/: is_numeric.rs  mod.rs
crates/jarl-core/src/lints/length_levels/: length_levels.rs
crates/jarl-core/src/lints/lengths/: lengths.rs  mod.rs
crates/jarl-core/src/lints/list2df/: list2df.rs  mod.rs
crates/jarl-core/src/lints/matrix_apply/: matrix_apply.rs  mod.rs
crates/jarl-core/src/lints/outer_negation/: outer_negation.rs
crates/jarl-core/src/lints/repeat/: mod.rs  repeat.rs
crates/jarl-core/src/lints/sample_int/: mod.rs  sample_int.rs
crates/jarl-core/src/lints/seq/: mod.rs  seq.rs
crates/jarl-core/src/lints/seq2/: mod.rs  seq2.rs
crates/jarl-core/src/lints/sort/: sort.rs
crates/jarl-core/src/lints/sprintf/: sprintf.rs
crates/jarl-core/src/lints/unreachable_code/: mod.rs  unreachable_code.rs
crates/jarl-core/src/lints/vector_logic/: vector_logic.rs
crates/jarl-core/src/lints/which_grepl/: mod.rs  which_grepl.rs
crates/jarl-lsp/: Cargo.toml
crates/jarl-lsp/src/: document.rs  lint.rs  server.rs  session.rs
crates/jarl/src/: lib.rs  logging.rs  main.rs  output_format.rs  statistics.rs
crates/jarl/src/commands/: check.rs  server.rs
crates/jarl/tests/integration/: allow_dirty.rs  allow_no_vcs.rs  assignment_op.rs  comments.rs  help.rs  helpers.rs  jarl.rs  main.rs  min_r_version.rs  rules.rs  toml.rs  toml_hierarchical.rs
demo/: foo.R  foo2.R  foo3.R
(+284 files in other folders)
