[workspace]
members = ["crates/*", "editors/zed", "xtask/codegen"]
resolver = "3"

[workspace.package]
authors = ["Etienne Bacher"]
edition = "2024"
rust-version = "1.88"
license-file = "LICENSE.md"
repository = "https://github.com/etiennebacher/jarl/"
readme = "README.md"

[workspace.dependencies]
air_fs = { package = "fs", git = "https://github.com/posit-dev/air", rev = "4cbd36d552e27d8930cff1602d56bfd9ce4c1ed1" }
air_r_parser = { git = "https://github.com/posit-dev/air", rev = "4cbd36d552e27d8930cff1602d56bfd9ce4c1ed1" }
air_r_syntax = { git = "https://github.com/posit-dev/air", rev = "4cbd36d552e27d8930cff1602d56bfd9ce4c1ed1" }
air_workspace = { package = "workspace", git = "https://github.com/posit-dev/air", rev = "4cbd36d552e27d8930cff1602d56bfd9ce4c1ed1" }
anyhow = "1.0.94"
biome_formatter = { git = "https://github.com/lionel-/biome", rev = "41d799cfa4cedd25625fc3f6bd7898532873f051" }
biome_rowan = { git = "https://github.com/lionel-/biome", rev = "41d799cfa4cedd25625fc3f6bd7898532873f051" }
clap = { version = "4.5.21", features = ["derive"] }
colored = "2.1.0"
ignore = "0.4.23"
insta = { version = "1.42.0", features = ["yaml"] }
etcetera = "0.8.0"
jarl-core = { path = "crates/jarl-core" }
jarl-lsp = { path = "crates/jarl-lsp" }
path-absolutize = "3.1.1"
rayon = "1.10.0"
regex = { version = "1.11.1", default-features = false, features = ["std"] }
rustc-hash = "2.1.1"
schemars = "1.1.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.143"
tempfile = "3.14.0"
toml = "0.9.2"
tracing = "0.1.41"

[profile.release]
lto = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
