[package]
name = "flir-core"
description = "Core linting functionality for flir R linter"
version = "0.0.17"
authors.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true
readme.workspace = true

[lib]
name = "flir_core"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Core parsing and syntax
air_r_parser.workspace = true
air_r_syntax.workspace = true
air_workspace.workspace = true
air_fs.workspace = true
biome_rowan.workspace = true

# Serialization and data structures
serde.workspace = true
toml.workspace = true
rustc-hash.workspace = true

# Error handling and utilities
anyhow.workspace = true
tracing.workspace = true
path-absolutize.workspace = true
ignore.workspace = true
tempfile.workspace = true

# Parallel processing
rayon.workspace = true

[dev-dependencies]
insta.workspace = true
