[package]
name = "flir-lsp"
description = "Language Server Protocol implementation for Flir linter"
version = "0.0.17"
authors.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true
readme.workspace = true

[[bin]]
name = "flir-lsp"
path = "src/bin/flir-lsp.rs"

[dependencies]
flir-core = { path = "../flir-core" }

air_workspace.workspace = true

# LSP dependencies
lsp-server = "0.7"
lsp-types = "0.95"

# Async and concurrency
crossbeam = "0.8"

# Error handling and utilities
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Collections and utilities
rustc-hash = "2.0"

# CLI for binary
clap = { version = "4.0", features = ["derive"] }

[dev-dependencies]
