[package]
name = "jarl-core"
description = "Core linting functionality for jarl R linter"
version = "0.0.19"
authors.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true
readme.workspace = true


[lib]
name = "jarl_core"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Core parsing and syntax
air_r_parser.workspace = true
air_r_syntax.workspace = true
air_workspace.workspace = true
air_fs.workspace = true
biome_rowan.workspace = true
biome_formatter.workspace = true

# Serialization and data structures
serde.workspace = true
toml.workspace = true
rustc-hash.workspace = true

# Error handling and utilities
anyhow.workspace = true
tracing.workspace = true
path-absolutize.workspace = true
ignore.workspace = true
tempfile.workspace = true

# Parallel processing
rayon.workspace = true

# Disable default features because we just need basic ones and we absolutely
# don't want this crate to pull openssl-sys as dependency as it prevents
# cross-compiling in the release workflow: "Could not find directory of OpenSSL
# installation, and this `-sys` crate cannot proceed without this knowledge."
git2 = {version  = "0.20.2", default-features = false}

[dev-dependencies]
insta.workspace = true


[lints.clippy]
module-inception = "allow"
